fixed placeholder image links andtext overflow

--- a/public/css/texthide.css
+++ b/public/css/texthide.css
@@ -2,7 +2,7 @@
 	text-overflow: ellipsis;
 	overflow: hidden;
 	width: 30em;
-	height: 3em;
+	height: 4em;
 }
 
 .empty {
